@@ -19,33 +19,6 @@
     <formatter.basedir>${project.parent.basedir}</formatter.basedir>
   </properties>
 
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <compilerArgs>
-            <!-- Allow reading all unnamed modules for JSONAssert -->
-            <arg>--add-reads</arg>
-            <arg>com.vaadin.hilla.parser.testutils=ALL-UNNAMED</arg>
-          </compilerArgs>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-javadoc-plugin</artifactId>
-        <configuration>
-          <additionalJOptions>
-            <!-- Allow reading all unnamed modules for JSONAssert -->
-            <additionalJOption>--add-reads</additionalJOption>
-            <additionalJOption>com.vaadin.hilla.parser.testutils=ALL-UNNAMED</additionalJOption>
-          </additionalJOptions>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
-
   <dependencies>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
@@ -64,42 +37,6 @@
       <groupId>com.vaadin</groupId>
       <artifactId>hilla-parser-jvm-utils</artifactId>
       <version>${project.version}</version>
-    </dependency>
-    <!-- Dependencies for EndToEndTestHelper -->
-    <dependency>
-      <groupId>com.vaadin</groupId>
-      <artifactId>hilla-parser-jvm-core</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>com.vaadin</groupId>
-      <artifactId>hilla-parser-jvm-plugin-backbone</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>com.vaadin</groupId>
-      <artifactId>hilla-parser-jvm-plugin-model</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>com.vaadin</groupId>
-      <artifactId>hilla-parser-jvm-plugin-nonnull</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>com.vaadin</groupId>
-      <artifactId>hilla-parser-jvm-plugin-subtypes</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>com.vaadin</groupId>
-      <artifactId>hilla-parser-jvm-plugin-transfertypes</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>io.swagger.core.v3</groupId>
-      <artifactId>swagger-core-jakarta</artifactId>
-      <version>${swagger.core.version}</version>
     </dependency>
   </dependencies>
 </project>
